--- a/Shamrock.Core.Test/Shamrock.Core.Test.csproj
+++ b/Shamrock.Core.Test/Shamrock.Core.Test.csproj
@@ -6,10 +6,10 @@
 
   <ItemGroup>
     <PackageReference Include="FakeItEasy">
-      <Version>4.1.1</Version>
+      <Version>4.2.0</Version>
     </PackageReference>
     <PackageReference Include="FluentAssertions">
-      <Version>5.0.0-beta0003</Version>
+      <Version>5.0.0-beta0004</Version>
     </PackageReference>
     <PackageReference Include="xunit">
       <Version>2.3.1</Version>
@@ -17,6 +17,10 @@
     <PackageReference Include="xunit.runner.console">
       <Version>2.3.1</Version>
     </PackageReference>
+  </ItemGroup>
+
+  <ItemGroup>
+    <PackageReference Update="NETStandard.Library" Version="2.0.1" />
   </ItemGroup>
 
 </Project>
